// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UsIdCRCWorkReleaseReferralRecord > transforms eligible record with multiple temporal criteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "notServingForSexualOffense": null,
    "usIdIncarcerationWithin18MonthsOfFtcdOrTpd": {
      "fullTermCompletionDate": 2023-10-10T00:00:00.000Z,
      "tentativeParoleDate": null,
    },
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "crc-work-release-eligible-01",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ID",
}
`;

exports[`transforms eligible record with life temporal criteria 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "notServingForSexualOffense": null,
    "usIdIncarcerationWithin1YearOfTpdAndLifeSentence": {
      "tentativeParoleDate": 2024-08-14T00:00:00.000Z,
    },
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "crc-work-release-eligible-02",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "stateCode": "US_ID",
}
`;
